--- a/tweet-tweet/src/app/feed/feed.component.html
+++ b/tweet-tweet/src/app/feed/feed.component.html
@@ -26,8 +26,9 @@
               </div>
             </div>
           </div>
+    <!--Modal for comment-->
     <div [ngClass]="{'show':display==true}"id="#commentModal"class="modal"tabindex="-1">
-       <div class="modal-dialog"style="z-index:1000">
+       <div class="modal-dialog">
          <div class="modal-content">
             <div class="modal-header">           
               <button class="close "data-dismiss="modal"(click)="closeModal()">&times;</button>
