--- a/tweet-tweet/src/app/myprofile/edit-profile/edit-profile.component.html
+++ b/tweet-tweet/src/app/myprofile/edit-profile/edit-profile.component.html
@@ -24,22 +24,21 @@
               </div>
 
           <div class="user-detail">
-
-          <div class="form-group" > 
+          <div class="form-group"> 
             <div class="text">Name</div>
-            <input class="inputBox" type="text" ngModel name="nameInput" class="form-control" #nameInput='ngModel'>
+            <input type="text" id="name" [(ngModel)]="user && user.name" name="name" class="form-control inputBox" #name="ngModel">
           </div>    
           <div class="form-group">
             <div class="text">Bio</div>
-            <input  class="inputBox" type="text" ngModel name="bioInput" class="form-control" #bioInput='ngModel'>
+            <input type="text" id="bio" [(ngModel)]="user && user.bio" name="bio" class="form-control inputBox" #bio="ngModel">
           </div>
           <div class="form-group">
             <div class="text">Location</div>
-            <input class="inputBox" type="text" class="form-control" ngModel name="locationInput" #locationInput='ngModel'>
+            <input type="text" id="location" [(ngModel)]="user && user.location" class="form-control inputBox" name="location" #location="ngModel">
           </div>
           <div class="form-group">
             <div class="date">Birth date</div>
-            <input class="inputBox" type="date" class= "form-control" ngModel name="dobInput" #dobInput='ngModel'>
+            <input id="dob" type="date"  [(ngModel)]="user && user.dob" class= "form-control inputBox" name="dob" #dob="ngModel">
           </div>
           
           </div> 
