--- a/tweet-tweet/src/app/explore/explore.component.css
+++ b/tweet-tweet/src/app/explore/explore.component.css
@@ -86,7 +86,7 @@ h5{
       background-repeat: no-repeat;
       background-size: cover;
       float:right;
-      border-radius:50%;
+      border-radius:20%;
      margin-top:-20px;
 
   }
@@ -94,3 +94,11 @@ h5{
   .tweets:hover{
     background-color:#ecf7fc;
   }
+  .bold{
+      font-weight:bolder;
+      color:black;
+      line-height: 1.3125;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
+  }
+ 
+  
