--- a/tweet-tweet/src/app/feed/feed.component.html
+++ b/tweet-tweet/src/app/feed/feed.component.html
@@ -4,7 +4,7 @@
     <div>
       <p><b>{{tweet.user.name}}</b> {{tweet.user.userhandle}} . 7h</p>
       <p>{{tweet.content.text}}</p>
-      <div *ngIf="true">
+      <div>
         <img src="../../assets/Images/nice.jpg">
       </div>
       <div class="d-flex justify-content-between">
@@ -17,7 +17,7 @@
           <span>572</span>
         </div>
         <div  (click)="onSelect(feed._id,feed)">
-          <i class="fa fa-heart-o" [ngClass]="{'selected':feed.isClicked==true}" aria-hidden="true"></i>
+          <i class="fa fa-heart-o" [ngClass]="{'selected':tweet.isClicked==true}" aria-hidden="true"></i>
           <span>572</span>
         </div>
         <div>
