some changes in modal

--- a/tweet-tweet/src/app/side-nav/side-nav.component.html
+++ b/tweet-tweet/src/app/side-nav/side-nav.component.html
@@ -38,7 +38,7 @@
           <span>Logout</span>
         </a>
       </mat-nav-list>
-      <a class="tweet-main-btn btn">Tweet</a>
+      <a class="tweet-main-btn btn"(click)="showModal()">Tweet</a>
     </div>
   </mat-sidenav>
   <mat-sidenav-content class="main-content-big mr-0">
