Added Interceptors, Auth Service, Updated Tweet UI

--- a/tweet-tweet/src/app/create-post/create-post.component.css
+++ b/tweet-tweet/src/app/create-post/create-post.component.css
@@ -3,6 +3,7 @@
     border-width: 0.2rem;
     border-left: none;
     border-top: none;
+    border-right: none;
     border-bottom-width: 0.7rem;
     border-style: solid;
 }
