Explore and tweet modal connected

--- a/tweet-tweet/src/app/side-nav/side-nav.component.html
+++ b/tweet-tweet/src/app/side-nav/side-nav.component.html
@@ -9,7 +9,7 @@
           <i  class="fa fa-home"aria-hidden="true"></i>
           <span >Home</span>
         </a>
-        <a mat-list-item (click)="toggle($event)"class="for-hover">
+        <a mat-list-item (click)="toggle($event)"routerLink="/explore"class="for-hover">
           <i class="fa fa-hashtag" aria-hidden="true"></i>
           <span>Explore</span>
         </a>
