--- a/tweet-tweet/src/app/side-nav/tweet-modal/tweet-modal.component.html
+++ b/tweet-tweet/src/app/side-nav/tweet-modal/tweet-modal.component.html
@@ -2,7 +2,7 @@
 <div #exampleModal id="modal"*ngIf="showModal==true">
   <div class="modal-header">
    
-    <button type="button" class="close" data-dismiss="#modal"(click)="close()" aria-label="Close">
+    <button type="button" class="close" data-dismiss="#modal"(click)="activeModal.dismiss('Cross click')" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
