Edit profile Modal errors corrected

--- a/tweet-tweet/src/app/myprofile/edit-profile/edit-profile.component.html
+++ b/tweet-tweet/src/app/myprofile/edit-profile/edit-profile.component.html
@@ -3,7 +3,7 @@
          <!-- Modal header --> 
             <div class="header">
                 <div class="inner-header"> 
-                <span class="closebtn" aria-haspopup="false" aria-label="Close" role="button">
+                <span class="closebtn" aria-haspopup="false" aria-label="Close" (click)="activeModal.dismiss('Cross click')"role="button">
                     <i class="fa fa-times"></i>
                 </span>
                 <span class="title" role="heading">Edit profile
