some minor error in modal corrected

--- a/tweet-tweet/src/app/myprofile/edit-profile/edit-profile.component.css
+++ b/tweet-tweet/src/app/myprofile/edit-profile/edit-profile.component.css
@@ -1,8 +1,9 @@
 
 .modal-content{
-    border-radius: 15px;
+    border-radius: 3.3rem;
     border:none;
     /* min-width: 600px !important; */
+    width:130%;
 }
 
 .modal-dialog{
