--- a/tweet-tweet/src/app/side-nav/tweet-modal/tweet-modal.component.html
+++ b/tweet-tweet/src/app/side-nav/tweet-modal/tweet-modal.component.html
@@ -1,5 +1,5 @@
 
-<div #exampleModal id="modal"*ngIf="showModal==true">
+<div #exampleModal id="modal">
   <div class="modal-header">
    
     <button type="button" class="close" data-dismiss="#modal"(click)="activeModal.dismiss('Cross click')" aria-label="Close">
