fixes#122 -- added service for updating profile

--- a/tweet-tweet/src/app/myprofile/edit-profile/edit-profile.component.html
+++ b/tweet-tweet/src/app/myprofile/edit-profile/edit-profile.component.html
@@ -1,20 +1,21 @@
-<div class="modal-dialog">
-        <div class="modal-content">
+<div id="modal" >
+  <form #userform = "ngForm" (ngSubmit)="userUpdate(userform.value)">
          <!-- Modal header --> 
-            <div class="header">
+            <div class="modal-header">
                 <div class="inner-header"> 
-                <span class="closebtn" aria-haspopup="false" aria-label="Close" (click)="activeModal.dismiss('Cross click')"role="button">
+                <span class="closebtn" aria-haspopup="false" aria-label="Close" (click)="activeModal.dismiss('Cross click')" role="button">
                     <i class="fa fa-times"></i>
                 </span>
                 <span class="title" role="heading">Edit profile
                 </span>
-                <span id="saveButton">Save
+                <span><button id="saveButton" type="submit">Save</button>
                 </span>
                 </div>
             </div>
 
+          <div class="modal-body">
          <!-- Modal body -->
-            <form #userForm = "ngForm">
+            
               <div class="twitter">
                 <div class="row-top">
                   <div class="user-wrapper">
@@ -42,6 +43,6 @@
           </div>
           
           </div> 
+          </div>
           </form>
-        </div>
       </div>
