--- a/tweet-tweet/src/app/myprofile/myprofile.component.html
+++ b/tweet-tweet/src/app/myprofile/myprofile.component.html
@@ -46,27 +46,29 @@
     </div>
     
       <span class="count">
-        <b>{{user.followerCount}}</b> Followers
+        <div class="followerCount" (click)=redirectToFollowers(user.userhandle)>
+          <b>{{user.followerCount}}</b> Followers 
+        </div>
+       <div class="followingCount" (click)=redirectToFollowing(user.userhandle)>
+        <b>{{user.followingCount}}</b> Following
+       </div>
       </span>
-    <span class="count">
-       <b>{{user.followingCount}}</b> Following
-        </span>
 
-        <div class="row-bottom">
+      <div class="row-bottom">
+        <small class="followers">
+          Tweets
+          </small>
           <small class="followers">
-            Tweets
-            </small>
+            Tweets & Replies
+          </small>
             <small class="followers">
-             Tweets & Replies
+            Media
             </small>
-             <small class="followers">
-              Media
-             </small>
-            <small class="followers">
-              Likes
-            </small>
-          </div>
-          <div class="row-bottom"></div>
+          <small class="followers">
+            Likes
+          </small>
+        </div>
+        <div class="row-bottom"></div>
   </div>
   </div>
 </div>
