Create Tweet Errors are resolved

--- a/tweet-tweet/src/app/create-post/create-post.component.html
+++ b/tweet-tweet/src/app/create-post/create-post.component.html
@@ -10,7 +10,7 @@
         <a><i class="fa fa-tasks icon mr-2" aria-hidden="true"></i></a>
         <a><i class="fa fa-git-square icon special mr-2" aria-hidden="true"></i></a>
         <a><i class="fa fa-smile-o icon special mr-2" aria-hidden="true"></i></a>
-        <button class="btn tweet ml-auto" (click) = "OnSubmit()" [disabled]="!uploader.getNotUploadedItems().length">Tweet</button>
+        <button class="btn tweet ml-auto" (click) = "OnSubmit()">Tweet</button>
     </div>
 </div>
 
