--- a/tweet-tweet/src/app/feed/feed.component.html
+++ b/tweet-tweet/src/app/feed/feed.component.html
@@ -7,7 +7,7 @@
       <div *ngIf="true" class="mr-4">
         <img src="../../assets/Images/nice.jpg">
       </div>
-      <div class="d-flex justify-content-between mb-3 mr-5">
+      <div class="d-flex justify-content-between mr-5 icons-row">
         <div>
           <i class="fa fa-comment-o" (click)="showModal()" aria-hidden="true"></i>
           <span>572</span>
