--- a/tweet-tweet/src/app/feed/feed.component.css
+++ b/tweet-tweet/src/app/feed/feed.component.css
@@ -34,7 +34,7 @@ img{
 }
 
 .fa:hover{
-    background-color: blue;
+    background-color: #F5F8FA;
     padding: 0.8rem;
     cursor: pointer;
     border-radius: 30px;
@@ -47,6 +47,7 @@ img{
     border-bottom-width: 1rem;
     margin-top: 1rem;
     margin-bottom: 1rem;
+    padding-bottom: 1rem;
 }
 
 .main-container:hover{
