--- a/tweet-tweet/src/app/myprofile/myprofile.component.css
+++ b/tweet-tweet/src/app/myprofile/myprofile.component.css
@@ -1,4 +1,3 @@
-
 .twitter-card{
   width: 562.5px;
   height: 400px;
@@ -8,7 +7,6 @@
   background: var(white);
 
 }
-
 
 .twitter{
   position:absolute;
@@ -21,10 +19,9 @@
 
 .row-top{
   position: relative;
-  align-items: center;
-  justify-content: space-between;
+  display: flex;
+  flex-direction: row;
   margin-bottom: 5rem;
-
 }
 
 .user-image{
